fix: broken styles

--- a/giphy-app/assets/css/style.css
+++ b/giphy-app/assets/css/style.css
@@ -5,34 +5,35 @@ body {
   max-width: 80%;
 }
 
-app .app-header {
+#app .app-header {
+  display: flex;
   padding: 10px;
   margin-bottom: 20px;
   border-bottom: 2px solid #999;
 }
-app .app-header .logo {
+#app .app-header .logo {
   margin-bottom: 5px;
 }
 
-app .app-header .header-left {
+#app .app-header .header-left {
   width: 20%;
 }
 
-app .app-header .header-right {
+#app .app-header .header-right {
   margin-left: 1.5rem;
   width: 100%;
 }
-app .app-header h1 {
+#app .app-header h1 {
   font-size: 3rem;
   margin: 0 auto 15px;
 }
 
 @media (max-width: 375px) {
-  app .app-header h1 {
+  #app .app-header h1 {
     font-size: 2rem;
     margin-bottom: 5px;
   }
-  app .app-header .logo {
+  #app .app-header .logo {
     width: 70px;
     margin-top: 5px;
   }
